--- a/CrochetByJk/Content/Site.css
+++ b/CrochetByJk/Content/Site.css
@@ -1,24 +1,306 @@
 ﻿body {
-    padding-top: 50px;
-    padding-bottom: 20px;
+    background: #f5f5f5;
+   font-family: 'Patua One', cursive;
 }
 
 /* Set padding to keep content from hitting the edges */
+
 .body-content {
     padding-left: 15px;
     padding-right: 15px;
 }
 
-/* Override the default bootstrap behavior where horizontal description lists 
-   will truncate terms that are too long to fit in the left column 
-*/
-.dl-horizontal dt {
-    white-space: normal;
-}
-
 /* Set width on the form input elements since they're 100% wide by default */
+
 input,
 select,
-textarea {
-    max-width: 280px;
+textarea { max-width: 280px; }
+
+#baner {
+  width: 100%;
+  background: #67A3D9
 }
+#baner img{
+ margin: 0 0 0 19%;
+}
+
+.navbar-default .navbar-brand { color: black; }
+
+.navbar-default .navbar-brand:hover { color: black; }
+
+.navbar-default {
+    background: white;
+    text-align: center;
+    border-bottom:1px solid #d0d0d0;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.navbar-default .nav {
+    float: none;
+    display: inline-block;
+}
+
+.navbar-default .navbar-nav > li > a {
+    outline: 0;
+    color: black;
+    margin: 0 10px 0 10px;
+    padding-bottom: 10px;
+    padding-right: 20px;
+    padding-left: 20px;
+    display: inline-block;
+}
+
+.navbar-default .navbar-nav > li > a:hover {
+    padding-bottom: 5px;
+    border-bottom: 2px solid #67A3D9;
+    -webkit-transition: border 0.3s ease-in-out, padding 0.3s ease-in-out;
+    -ms-transition: border 0.3s ease-in-out, padding 0.3s ease-in-out;
+    -o-transition: border 0.3s ease-in-out, padding 0.3s ease-in-out;
+    transition: border 0.3s ease-in-out, padding 0.3s ease-in-out;
+}
+
+.carousel { margin-top: 50px; }
+
+.carousel-inner > .item > img,
+.carousel-inner > .item > a > img {
+    width: 100%;
+    max-height: 500px;
+}
+
+#search-form { height: 20px; }
+
+.navbar-brand {
+    float: left;
+    padding: 0px;
+    font-size: 0px;
+    line-height: 0px;
+}
+
+.navbar-brand:hover { cursor: pointer; }
+
+.navbar-form {
+    padding-top: 5px;
+    border: none;
+}
+
+.navbar-collapse collapse in { display: inline-block; }
+
+.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
+    background-color: #67A3D9;
+    outline: none;
+}
+
+#search-form-group { display: inline-block; }
+
+#search-form {
+    -ms-border-top-right-radius: 0;
+    border-top-right-radius: 0;
+    -ms-border-bottom-right-radius: 0;
+    border-bottom-right-radius: 0;
+    width: 100px;
+}
+
+#search-form:focus {
+    outline: none;
+    border-color: #67A3D9;
+    box-shadow: 0 0 3px #67A3D9;
+}
+
+#search-form-menu-item {
+    margin: 0px;
+    padding: 0px;
+    border-bottom: none;
+    transition: none;
+}
+
+#btn-magnifier {
+    border-top-left-radius: 0em;
+    border-bottom-left-radius: 0em;
+    padding: 0px 1px 0px 1px;
+    height: 20px;
+    position: relative;
+    top: 1px;
+}
+
+#btn-magnifier:focus { outline: none }
+
+#btn-magnifier:hover {
+    color: white;
+    background-color: #67A3D9;
+    outline: none;
+    border-color: #67A3D9;
+    box-shadow: 0 0 3px #67A3D9;
+}
+
+#search-button-menu-item {
+    padding-bottom: 0px;
+    border-bottom: none;
+    transition: none;
+    float: left;
+}
+
+.row {
+    margin-right: -10px;
+    margin-left: -10px;
+}
+
+.image-container { margin: 0 5% 5% 5%; }
+
+
+
+.image-block {
+    border: 10px solid #f5f5f5;
+    background-color: white;
+    padding: 15px;
+    height: 350px;
+    text-align: center;
+    transition: background-color 1s;
+}
+
+.image-block:hover {
+    background-color: rgba(0, 105, 162, 1);
+    color: white;
+    cursor: pointer;
+}
+
+.image-block-body {
+    height: 100%;
+    width: 100%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.image-block-body > p {
+    width: 100%;
+    height: 100%;
+    font-weight: normal;
+    font-size: 19px;
+    padding-top: 150px;
+    background-color: rgba(3, 3, 3, 0.0);
+    color: rgba(6, 6, 6, 0.0);
+    transition: background-color 1s;
+}
+
+.image-block-body > p:hover {
+    background-color: rgba(3, 3, 3, 0.5);
+    color: white;
+}
+
+.aboutMeContainer{
+    margin: 0 6% 6% 6%;
+    background-color: #67A3D9;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border: 10px solid #f5f5f5;
+}
+
+.aboutMeHeader{
+    margin: 2% 0 2% 0;
+    color: white;
+    font-size: 30px;
+    font-weight: bold;
+    text-align: center;
+}
+
+.aboutMeText{
+    color: white;
+    margin: 5%;
+    font-size: 15px;
+    text-align: center;
+}
+.myPicture{
+    margin: 2%;
+}
+.myPicture img{
+    height: 180px;
+    width: 171px;
+    display: block;
+    margin: 0 auto;
+    box-shadow: 0 0 8px rgba(0, 0, 0, .8);
+}
+.footer-item { margin-top: 20px; }
+
+@media (max-width: 1000px), screen and (max-width: 766px) {
+    .navbar-header { float: none; }
+
+    .navbar-left, .navbar-right { float: none !important; }
+
+    .navbar-toggle { display: block; }
+
+    .navbar-collapse {
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 #ffffff;
+        box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
+    }
+
+    .navbar-fixed-top {
+        top: 0;
+        border-width: 0 0 1px;
+    }
+
+    .navbar-collapse.collapse { display: none !important; }
+
+    .navbar-nav {
+        float: none !important;
+        margin-top: 7.5px;
+    }
+
+    .navbar-nav > li { float: none; }
+
+    .navbar-nav > li > a {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+
+    .collapse.in { display: block !important; }
+
+    #search-form-menu-item:hover {
+        border: none;
+        transition: none;
+        background-color: white;
+        box-shadow: none;
+    }
+
+    .navbar-default .navbar-nav > li > a:hover {
+        transition: none;
+        padding-bottom: 8px;
+        background-color: #67A3D9;
+        color: white;
+        box-shadow: 10px 10px 5px #888888;
+        border-radius: 4px;
+    }
+
+    .icon-bar { background-color: white; }
+}
+
+.adminForm{
+    margin: 16% 10% 10% 10% !important;
+    display: block; 
+}
+
+.admin-login-button:hover{
+    background-color: #67A3D9;
+    color: white;
+}
+#formHorizontalEmail:focus, #formHorizontalPassword:focus{
+    outline: none;
+    border-color: #67A3D9;
+    box-shadow: 0 0 3px #67A3D9;
+}
+
+#adminNavigationPanel{
+ margin: 50% 10% 10% 10%;
+ display: block;
+}
+
+@media only screen and (max-width: 768px) {
+    
+    #btn-magnifier { top: -1px; }
+    .image-container { margin: 0; }
+}
+
+@media (max-width: 499px) {
+    .image-container { margin:0}
+}
+
+@media (max-width:766px) and (min-width:500px) {
+  .image-container{margin: 15%}
+}​
