--- a/CrochetByJk/Views/Shared/_Layout.cshtml
+++ b/CrochetByJk/Views/Shared/_Layout.cshtml
@@ -4,6 +4,8 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Patua+One" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+    <link rel="icon" href="~/Content/Img/crochetIcon.png">
     <title>Crochet by JK</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
