--- a/CrochetByJk/Content/Site.css
+++ b/CrochetByJk/Content/Site.css
@@ -22,8 +22,8 @@ textarea { max-width: 280px; }
   max-height: 400px;
 }
 #baner img{
-   width: 65%;
-   margin: 0 18% 0 18%;
+    display:block;
+    margin:auto;
 }
 
 .navbar-default .navbar-brand { color: black; }
