--- a/CrochetByJk/Content/Site.css
+++ b/CrochetByJk/Content/Site.css
@@ -17,13 +17,13 @@ select,
 textarea { max-width: 280px; }
 
 #baner {
-  width: 100%;
   background: #67A3D9;
   max-height: 400px;
 }
 #baner img{
-    display:block;
-    margin:auto;
+    display: block;
+    width: auto;
+    margin: auto;
 }
 
 .navbar-default .navbar-brand { color: black; }
@@ -148,8 +148,6 @@ textarea { max-width: 280px; }
 
 .image-container { margin: 0 5% 5% 5%; }
 
-
-
 .image-block {
     border: 10px solid #f5f5f5;
     background-color: white;
@@ -157,6 +155,8 @@ textarea { max-width: 280px; }
     height: 350px;
     text-align: center;
     transition: background-color 1s;
+    float: left;
+    margin: 0 auto;
 }
 
 .image-block:hover {
@@ -188,7 +188,7 @@ textarea { max-width: 280px; }
 }
 
 .aboutMeContainer{
-    margin: 0 6% 6% 6%;
+    margin: 3% 6% 6% 6%;
     background-color: #67A3D9;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     border: 10px solid #f5f5f5;
@@ -220,7 +220,17 @@ textarea { max-width: 280px; }
 }
 .footer-item { margin-top: 21px; }
 
+@media (max-width: 400px){
+     .image-container {margin:0}
+}
+
 @media (max-width: 1000px), screen and (max-width: 766px) {
+    
+    #baner img{
+        width: 100%;
+        max-height: 400px;
+    }
+    
     .navbar-header { float: none; }
 
     .navbar-left, .navbar-right { float: none !important; }
@@ -274,7 +284,7 @@ textarea { max-width: 280px; }
 }
 
 .adminForm{
-    margin: 16% 10% 10% 10% !important;
+    margin: 10% !important;
     display: block; 
 }
 
@@ -288,21 +298,81 @@ textarea { max-width: 280px; }
     box-shadow: 0 0 3px #67A3D9;
 }
 
-#adminNavigationPanel{
- margin: 50% 10% 10% 10%;
- display: block;
+#adminButtonGroup{
+  display: flex;
+  justify-content: center;
+  width: 100%;
 }
 
-@media only screen and (max-width: 768px) {
-    
-    #btn-magnifier { top: -1px; }
-    .image-container { margin: 0; }
+#addNewProductForm{
+  display: flex;
+  justify-content: center;
+  margin: 5%;
+}
+.newProductFormSection{
+   margin: 0 10px 0 10px;
+}
+.adminButton {
+  display: inline-block;
+  padding: 15px 25px;
+  font-size: 24px;
+  height: 150px;
+  width: 150px;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  outline: none;
+  color: #fff;
+  background-color: #26C6DA;
+  border: none;
+  border-radius: 2px;
+  box-shadow: 9px 9px #999;
+  white-space: normal;
+  margin: 1%;
 }
 
-@media (max-width: 499px) {
-    .image-container { margin:0}
+.adminButton:hover {background-color: rgba(3, 3, 3, 0.5);}
+
+.adminButton:active {
+  background-color: #26C6DA;
+  box-shadow: 4px 5px #666;
+  transform: translateY(4px);
+  }
+
+.adminButton:focus{outline: 0;}
+
+.btnAddNewProduct{
+    float: right;
 }
 
-@media (max-width:766px) and (min-width:500px) {
-  .image-container{margin: 15%}
-}​
+.btnAddNewProduct:hover{
+ background-color:  #26C6DA;
+ color: white
+}
+.newProductDescription{
+min-height: 185px; 
+}
+.btn-file {
+    position: relative;
+    overflow: hidden;
+}
+.btn-file input[type=file] {
+    position: absolute;
+    top: 0;
+    right: 0;
+    min-width: 100%;
+    min-height: 100%;
+    font-size: 100px;
+    text-align: right;
+    filter: alpha(opacity=0);
+    opacity: 0;
+    outline: none;
+    background: white;
+    cursor: inherit;
+    display: block;
+}
+@media (min-width: 1281px) {
+    .image-container {margin:auto}
+    .aboutMeContainer {margin: 3% auto auto auto}
+}
+
