--- a/CrochetByJk/Content/Site.css
+++ b/CrochetByJk/Content/Site.css
@@ -371,6 +371,33 @@ min-height: 185px;
     cursor: inherit;
     display: block;
 }
+.example-enter{
+  opacity: 0.01;
+}
+
+.example-enter .example-enter-active{
+  opacity: 1;
+  transition: opacity 500ms ease-in;
+}
+
+.example-appear {
+  opacity: 0.01;
+}
+
+.example-appear.example-appear-active {
+  opacity: 1;
+  transition: opacity .5s ease-in;
+}
+.validationMsg {
+    color: red;
+    margin: 1%;
+    text-align: center;
+}
+
+.course .course_details{
+	width:250px;	
+}
+
 @media (min-width: 1281px) {
     .image-container {margin:auto}
     .aboutMeContainer {margin: 3% auto auto auto}
