--- a/CrochetByJk/Views/Shared/Error.cshtml
+++ b/CrochetByJk/Views/Shared/Error.cshtml
@@ -2,12 +2,12 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Error</title>
+    <title>Błąd</title>
 </head>
 <body>
     <hgroup>
-        <h1>Error.</h1>
-        <h2>An error occurred while processing your request.</h2>
+        <h1>Wystąpił błąd.</h1>
+        <h2>Spróboj ponownie lub skontaktuj się z administratorem.</h2>
     </hgroup>
 </body>
 </html>
