--- a/CrochetByJk/Views/Shared/_Layout.cshtml
+++ b/CrochetByJk/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
 <div id="baner"></div>
 <div id="navbar"></div>
 @RenderBody()
-<div id="footer" style="margin-top: 10%"></div>
+<div id="footer"></div>
 
 @Scripts.Render("~/bundles/jquery")
 @Scripts.Render("~/bundles/bootstrap")
