--- a/CrochetByJk/Views/Shared/_AdminLayout.cshtml
+++ b/CrochetByJk/Views/Shared/_AdminLayout.cshtml
@@ -9,18 +9,17 @@
     <title>Crochet by JK</title>
 
     @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/react")
+
 </head>
 <body>
-
-
 
 @RenderBody()
 @Scripts.Render("~/bundles/jquery")
 @Scripts.Render("~/bundles/bootstrap")
 @Scripts.Render("~/bundles/modernizr")
-
+@Scripts.Render("~/bundles/react")
 <script src="~/Scripts/aos/aos.js"></script>
+<script src="~/Scripts/fileinput.js"></script>
 @RenderSection("scripts", required: false)
 </body>
 </html>
