--- a/CrochetByJk/Content/bootstrap-fileinput/css/fileinput.css
+++ b/CrochetByJk/Content/bootstrap-fileinput/css/fileinput.css
@@ -331,7 +331,7 @@
     opacity: 0.7;
     top: 45%;
     font-size: 4em;
-    color: #67A3D9;
+    color: #1c94c4;
 }
 
 .file-zoom-dialog .floating-buttons {
