--- a/CrochetByJk/Views/Admin/Panel.cshtml
+++ b/CrochetByJk/Views/Admin/Panel.cshtml
@@ -10,4 +10,5 @@
 @section scripts
 {
     <script src="~/Content/ReactComponents/AdminPanel.jsx"></script>
+    <script src="~/Scripts/jquery.validate.js"></script>
 }
