--- a/CrochetByJk/Content/Site.css
+++ b/CrochetByJk/Content/Site.css
@@ -1,6 +1,7 @@
 ﻿body {
     background: #f5f5f5;
-    font-family: 'Dekko', sans-serif;
+    font-family: 'Prompt', sans-serif;
+    font-size: 15px;
     font-weight: bold;
 }
 
@@ -210,6 +211,23 @@ textarea { max-width: 280px; }*/
     background-color: rgba(3, 3, 3, 0.5);
     color: white;
 }
+
+/*.headermessage {
+    margin: 5% 0 5% 0;
+    color: white;
+    font-size: 30px;
+    font-weight: bold;
+    width: 100%;
+    height: 100%;
+    border: 10px solid #f5f5f5;
+    text-align: center;
+    background-color:  #67A3D9;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.headermessage > h2 {
+    margin-top: 10px;
+}*/
 
 .aboutMeContainer {
     margin: 3% 6% 6% 6%;
