--- a/CrochetByJk/Views/Home/Index.cshtml
+++ b/CrochetByJk/Views/Home/Index.cshtml
@@ -1,14 +1,19 @@
-﻿@{
+﻿@model IEnumerable<CrochetByJk.ViewModel.ProductTileViewModel>
+@{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <div id="tiles"></div>
-<div id="aboutMe"  data-aos="fade-down"></div>
-
+@Html.React("CategoryProducts", new
+{
+    products = Model
+})
+<div id="aboutMe" data-aos="fade-down"></div>
 
 @Scripts.Render("~/bundles/react")
 @section scripts{
-    <script src="~/Content/ReactComponents/ItemCointainer.jsx"></script>
+    <script src="~/Content/ReactComponents/CategoryProducts.jsx"></script>
     <script src="~/Content/ReactComponents/AboutMe.jsx"></script>
-    <script>AOS.init({duration: 2000});</script>
+    <script>AOS.init({ duration: 2000 });</script>
+    @Html.ReactInitJavaScript()
 }
