--- a/CrochetByJk/Views/Product/CategoryProducts.cshtml
+++ b/CrochetByJk/Views/Product/CategoryProducts.cshtml
@@ -1,16 +1,18 @@
-﻿@model IEnumerable<CrochetByJk.ViewModel.ProductViewModel>
+﻿@model CrochetByJk.ViewModel.ProductsInCategoryViewModel
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 @Html.React("CategoryProducts", new
 {
-    products = Model
+    products = Model.Products,
+    categoryName = Model.CategoryName
 })
 
 
 @section scripts
 {
     <script src="~/Content/ReactComponents/CategoryProducts.jsx"></script>
+    <script>AOS.init({duration: 2000});</script>
     @Html.ReactInitJavaScript()
 }
