--- a/CrochetByJk/Content/Site.css
+++ b/CrochetByJk/Content/Site.css
@@ -28,6 +28,10 @@ textarea { max-width: 280px; }*/
         max-height: 400px;
     }
     
+    #baner:hover {
+        cursor: pointer;
+    }
+    
     #baner img {
         display: block;
         width: auto;
@@ -71,6 +75,17 @@ textarea { max-width: 280px; }*/
         -ms-transition: border 0.3s ease-in-out, padding 0.3s ease-in-out;
         -o-transition: border 0.3s ease-in-out, padding 0.3s ease-in-out;
         transition: border 0.3s ease-in-out, padding 0.3s ease-in-out;
+    }
+    
+    .selected-menu-item {
+        outline: 0;
+        color: black;
+        margin: 0 10px 0 10px;
+        padding-right: 20px;
+        padding-left: 20px;
+        display: inline-block;
+        padding-bottom: 5px !important;
+        border-bottom: 2px solid #67A3D9;
     }
     
     .carousel {
@@ -172,18 +187,24 @@ textarea { max-width: 280px; }*/
     }
     
     .image-container {
-        margin: 0 5% 5% 5%;
+        /*margin: 0 5% 5% 5%;*/
+        display: flex;
+        align-content: space-between;
+        justify-content: center;
+        flex-wrap: wrap;
     }
     
     .image-block {
         border: 10px solid #f5f5f5;
         background-color: white;
         padding: 15px;
-        height: 350px;
+        /*height: 350px;*/
         text-align: center;
         transition: background-color 1s;
-        float: left;
-        margin: 0 auto;
+        /*float: left;*/
+        height: auto;
+        width: auto;
+        /*margin: 0 auto;*/
     }
     
     .image-block:hover {
@@ -252,14 +273,217 @@ textarea { max-width: 280px; }*/
         margin-top: 21px;
     }
     
-    @media (max-width: 400px) {
-        .image-container {
-            margin: 0
+    .adminForm {
+        margin: 10% !important;
+        display: block;
+    }
+    
+    .admin-login-button:hover {
+        background-color: #67A3D9;
+        color: white;
+    }
+    
+    #formHorizontalEmail:focus,
+    #formHorizontalPassword:focus {
+        outline: none;
+        border-color: #67A3D9;
+        box-shadow: 0 0 3px #67A3D9;
+    }
+    
+    #adminButtonGroup,
+    .goToNewProductContainer {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+    }
+    
+    #addNewProductForm {
+        margin: 5% 15% 5% 15%;
+    }
+    
+    .error {
+        color: #d82323
+    }
+    
+    .newProductFormSection {
+        margin: 0 10px 0px 10px;
+    }
+    
+    .adminButton,
+    .btnGoToNewProduct {
+        /*display: inline-block;*/
+        padding: 2%;
+        font-size: 24px;
+        /*width: 150px;*/
+        cursor: pointer;
+        /*text-align: center;*/
+        text-decoration: none;
+        outline: none;
+        color: #fff;
+        background-color: #67A3D9;
+        border: none;
+        border-radius: 2px;
+        /*box-shadow: 9px 9px #999;*/
+        /*white-space: normal;*/
+        /*margin: 1%;*/
+    }
+    
+    .adminButton:hover,
+    .btnGoToNewProduct:hover {
+        background-color: #7fb1df;
+        color: white
+    }
+    
+    .adminButton:active {
+        background-color: #67A3D9;
+        color: white;
+        /*background-color: #67A3D9;
+        box-shadow: 4px 5px #666;
+        transform: translateY(4px);*/
+    }
+    
+    .adminButton:focus {
+        outline: 0;
+        background-color: #67A3D9;
+        color: white;
+    }
+    
+    .btnAddNewProduct:hover {
+        background-color: #67A3D9;
+        color: white
+    }
+    
+    .newProductDescription {
+        min-height: 111px;
+        min-width: 100%;
+    }
+    
+    .adminFormAnimation-enter {
+        opacity: 0.01;
+    }
+    
+    .adminFormAnimation-enter .adminFormAnimation-enter-active {
+        opacity: 1;
+        transition: opacity 500ms ease-in;
+    }
+    
+    .adminFormAnimation-appear {
+        opacity: 0.01;
+    }
+    
+    .adminFormAnimation-appear.adminFormAnimation-appear-active {
+        opacity: 1;
+        transition: opacity .5s ease-in;
+    }
+    
+    #validationMsg {
+        color: #d82323;
+        margin: 1%;
+        text-align: center;
+        display: flex;
+        justify-content: center;
+    }
+    
+    .course .course_details {
+        width: 250px;
+    }
+    
+    #productDetails {
+        text-align: center;
+        display: flex;
+        /*flex-wrap: wrap;*/
+        /*justify-content: space-between;*/
+        background: #ffffff;
+        margin: 2%;
+        /*height: 100%;
+        width: 100%;  */
+    }
+    
+    #newProductName {
+        /*align-self: flex-start;
+        padding-left: 5%;
+        padding-right: 1%;
+        margin-left: 1%;
+        text-align: left;
+        height: 50%;
+        width:  50%;*/
+    }
+    
+    #productName {
+        align-self: flex-start;
+        padding-left: 5%;
+        padding-right: 1%;
+        /*margin-left: 1%;*/
+        text-align: left;
+        height: 50%;
+        width: 50%;
+    }
+    
+    #productQuestionForm div{
+        margin-right: 0px;
+        margin-left: 0px;
+    }
+    
+    #productName h2 {}
+    
+    #productName p {
+        /*text-align: right;*/
+    }
+    
+    #contactForm {
+        /*align-self: flex-end;*/
+        /*margin: 2%;*/
+    }
+    
+    #productDescription {
+        /*align-self: center;
+         flex-direction: row;*/
+        /*float: right;
+        margin: 0% 3% 0 5%;
+        max-width: 50%;*/
+    }
+    
+    #askForProductButton {
+        margin-top: 4%;
+        /*font-size: 14px;*/
+    }
+    
+    #galleryContainer {
+        align-self: flex-start;
+        padding: 2%;
+        height: 50%;
+        width: 50%;
+    }
+    
+    #contained-modal-title {
+        text-align: center;
+    }
+    
+    .modal-container textarea {
+        resize: vertical;
+        min-height: 200px;
+    }
+    
+    #gallery {
+        box-shadow: 3px 3px 3px 3px #999;
+    }
+    
+    @media (min-width: 1281px) {
+        /*.image-container {
+            margin: auto
+        }*/
+        .aboutMeContainer {
+            margin: 3% auto auto auto
         }
     }
     
-    @media (max-width: 1000px),
-    screen and (max-width: 766px) {
+    @media (max-width: 400px) {
+        /*.image-container {
+            margin: 0
+        }*/
+    }
+    
+    @media (max-width: 1000px) {
         #baner img {
             width: 100%;
             max-height: 400px;
@@ -314,148 +538,14 @@ textarea { max-width: 280px; }*/
             box-shadow: 10px 10px 5px #888888;
             border-radius: 4px;
         }
+        .selected-menu-item-small-size {
+            padding-bottom: 8px;
+            background-color: #67A3D9;
+            color: white;
+            box-shadow: 10px 10px 5px #888888;
+            border-radius: 4px;
+        }
         .icon-bar {
             background-color: white;
-        }
-    }
-    
-    .adminForm {
-        margin: 10% !important;
-        display: block;
-    }
-    
-    .admin-login-button:hover {
-        background-color: #67A3D9;
-        color: white;
-    }
-    
-    #formHorizontalEmail:focus,
-    #formHorizontalPassword:focus {
-        outline: none;
-        border-color: #67A3D9;
-        box-shadow: 0 0 3px #67A3D9;
-    }
-    
-    #adminButtonGroup,
-    .goToNewProductContainer {
-        display: flex;
-        justify-content: center;
-        width: 100%;
-    }
-    
-    #addNewProductForm {
-        margin: 5% 15% 5% 15%;
-    }
-    
-    .error {
-        color: #d82323
-    }
-    
-    .newProductFormSection {
-        margin: 0 10px 0px 10px;
-    }
-    
-    .adminButton,
-    .btnGoToNewProduct {
-        display: inline-block;
-        padding: 15px 25px;
-        font-size: 24px;
-        width: 150px;
-        cursor: pointer;
-        text-align: center;
-        text-decoration: none;
-        outline: none;
-        color: #fff;
-        background-color: #67A3D9;
-        border: none;
-        border-radius: 2px;
-        box-shadow: 9px 9px #999;
-        white-space: normal;
-        margin: 1%;
-    }
-    
-    .adminButton:hover,
-    .btnGoToNewProduct:hover {
-        background-color: rgba(3, 3, 3, 0.5);
-    }
-    
-    .adminButton:active {
-        background-color: #67A3D9;
-        box-shadow: 4px 5px #666;
-        transform: translateY(4px);
-    }
-    
-    .adminButton:focus {
-        outline: 0;
-    }
-    
-    .btnAddNewProduct:hover {
-        background-color: #67A3D9;
-        color: white
-    }
-    
-    .newProductDescription {
-        min-height: 111px;
-        min-width: 100%;
-    }
-    
-    .adminFormAnimation-enter {
-        opacity: 0.01;
-    }
-    
-    .adminFormAnimation-enter .adminFormAnimation-enter-active {
-        opacity: 1;
-        transition: opacity 500ms ease-in;
-    }
-    
-    .adminFormAnimation-appear {
-        opacity: 0.01;
-    }
-    
-    .adminFormAnimation-appear.adminFormAnimation-appear-active {
-        opacity: 1;
-        transition: opacity .5s ease-in;
-    }
-    
-    #validationMsg {
-        color: #d82323;
-        margin: 1%;
-        text-align: center;
-        display: flex;
-        justify-content: center;
-    }
-    
-    .course .course_details {
-        width: 250px;
-    }
-    
-    #productName {
-        float: right;
-        margin: 3% 5% 5% 5%;
-        vertical-align: top;
-        text-align: left;
-    }
-      #productDescription {
-         float: right;
-        /*margin: 3% 5% 5% 5%;*/
-        /*vertical-align: top;
-        word-wrap: break-word;*/
-        max-width: 50%;
-    }
-    #galleryContainer {
-     float: left;
-        margin: 5% 5% 5% 5%;
-    }
-    
-    #gallery {
-        box-shadow: 9px 9px 9px 9px #999;
-    }
-    
-    @media (min-width: 1281px) {
-        .image-container {
-            margin: auto
-        }
-        .aboutMeContainer {
-            margin: 3% auto auto auto
         }
     }
