--- a/CrochetByJk/Views/Admin/Panel.cshtml
+++ b/CrochetByJk/Views/Admin/Panel.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
-    Layout = "../Shared/_AdminLayout.cshtml";
+   // Layout = "../Shared/_AdminLayout.cshtml";
+    Layout = "../Shared/_Layout.cshtml";
 }
 
 <div id="adminNavigationPanel"></div>
@@ -9,6 +10,7 @@
 
 @section scripts
 {
+<script src="~/Scripts/fileinput.js"></script>
     <script src="~/Content/ReactComponents/AdminPanel.jsx"></script>
     <script src="~/Scripts/jquery.validate.js"></script>
 }
