--- a/CrochetByJk/Views/Product/ProductDetails.cshtml
+++ b/CrochetByJk/Views/Product/ProductDetails.cshtml
@@ -1,4 +1,4 @@
-﻿@model CrochetByJk.ViewModel.ProductViewModel
+﻿@model CrochetByJk.ViewModel.ProductWithSeeAlsoProductsViewModel
 
 @{
     Layout = "../Shared/_Layout.cshtml";
