--- a/CrochetByJk/Views/Shared/Error.cshtml
+++ b/CrochetByJk/Views/Shared/Error.cshtml
@@ -5,7 +5,7 @@
     <title>Błąd</title>
 </head>
 <body>
-    <hgroup style="height: 100%">
+    <hgroup style="min-height: 500px; text-align: center; margin-top: 5%;">
         <h1>Wystąpił błąd.</h1>
         <h2>Spróbuj ponownie lub skontaktuj się z administratorem.</h2>
     </hgroup>
