--- a/CrochetByJk/Content/Site.css
+++ b/CrochetByJk/Content/Site.css
@@ -3,11 +3,37 @@
         height: 100%;
     }*/
         
+        textarea:focus,
+        input[type="text"]:focus,
+        input[type="password"]:focus,
+        input[type="datetime"]:focus,
+        input[type="datetime-local"]:focus,
+        input[type="date"]:focus,
+        input[type="month"]:focus,
+        input[type="time"]:focus,
+        input[type="week"]:focus,
+        input[type="number"]:focus,
+        input[type="email"]:focus,
+        input[type="url"]:focus,
+        input[type="search"]:focus,
+        input[type="tel"]:focus,
+        input[type="color"]:focus,
+        input[type="search"]:focus,
+        input[type="file"]:focus,
+        select:active,
+        .uneditable-input:focus {
+            border-color: #67A3D9 !important;
+            box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px #67A3D9 !important;
+            outline: 0 none !important;
+        }
+        
         body {
             background: #f5f5f5;
             font-family: 'Prompt', sans-serif;
             font-size: 19px;
             font-weight: bold;
+            width: 100%;
+            min-height: 100%;
         }
         /* Set padding to keep content from hitting the edges */
         
@@ -301,25 +327,72 @@ textarea { max-width: 280px; }*/
             box-shadow: 0 0 3px #67A3D9;
         }
         
-        #adminButtonGroup,
-        #addNewProductForm,
-        #goToNewProduct {
+        #adminButtonGroup {
             display: flex;
-            justify-content: space-around;
+            justify-content: center;
             flex-wrap: wrap;
         }
         
-        #addNewProductForm,
-        #goToNewProduct {
+        #goToNewProduct,
+        {
+            display: flex;
+            justify-content: center;
+            flex-basis: 100%;
+        }
+        
+        #adminManagePanel {
+            flex-basis: 100%;
+            margin: 4%;
+        }
+        
+        #addNewProductForm {
             margin: 5%;
         }
-        /*#addNewProductForm, 
-        #goToNewProduct{
-            
-        }*/
-        /*#addNewProductForm {
-            margin: 5% 15% 5% 15%;
-        }*/
+        
+        #productsAdminTableContainer {
+            background: #ffffff;
+            word-wrap: break-word;
+            padding: 1%;
+        }
+        
+        #productsAdminTable {
+            table-layout: auto;
+            border-collapse: collapse;
+            width: 100%;
+            text-align: center
+        }
+        
+        #productsAdminTable>tbody>tr>td {
+            vertical-align: middle;
+        }
+        
+        #productsAdminTable>thead>tr>th {
+            text-align: center
+        }
+        
+        .pagination>.active>a {
+            background-color: #67A3D9;
+            border-color: #67A3D9;
+        }
+        
+        select[name="productsAdminTable_length"] {
+            width: '265px' !important;
+            height: '44px' !important;
+        }
+        
+        #productsAdminTable_info {
+            display: none;
+        }
+        
+        #productsAdminTable_filter {
+            float: right;
+        }
+        
+        #productsAdminTable_length,
+        #productsAdminTable_filter {
+            margin-top: 3%;
+            margin-bottom: 3%;
+        }
         
         .error {
             color: #d82323
@@ -357,10 +430,6 @@ textarea { max-width: 280px; }*/
             background-color: #67A3D9;
             color: white;
         }
-        /*.btnAddNewProduct:hover {
-            background-color: #67A3D9;
-            color: white
-        }*/
         
         .newProductDescription {
             min-height: 111px;
@@ -516,6 +585,23 @@ textarea { max-width: 280px; }*/
             animation: spin 5s linear infinite;
         }
         
+        .loadingContainer {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+        }
+        
+        .loadingComponent {
+            width: 120px;
+            height: 120px;
+            border: 16px solid #ffffff;
+            border-radius: 50%;
+            border-top: 16px solid#67A3D9;
+            -webkit-animation: spin 5s linear infinite;
+            animation: spin 5s linear infinite;
+        }
+        
         @-webkit-keyframes spin {
             0% {
                 -webkit-transform: rotate(0deg);
@@ -541,7 +627,7 @@ textarea { max-width: 280px; }*/
                 content: " ";
                 height: 100%;
             }
-            .navbar-nav>li>a{
+            .navbar-nav>li>a {
                 /*padding-bottom: 10px; 
                 padding-top: 10px;*/
             }
@@ -630,7 +716,6 @@ textarea { max-width: 280px; }*/
                 box-shadow: 10px 10px 5px #888888;
                 border-radius: 4px;
             }
-
             .icon-bar {
                 background-color: white;
             }
