--- a/CrochetByJk/Views/Shared/_Layout.cshtml
+++ b/CrochetByJk/Views/Shared/_Layout.cshtml
@@ -11,10 +11,7 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-    <div class="pageLoaderContainer">
-        <div class="pageLoader">
-        </div>
-    </div>
+
 <div id="currentAction" style="display: none">
     @Html.Raw(ViewContext.RouteData.Values["action"].ToString().ToLower())
 </div>
@@ -22,10 +19,12 @@
     <div id="baner"></div>
 </a>
 <div id="navbar"></div>
+<div class="pageLoaderContainer">
+    <div class="pageLoader">
+    </div>
+</div>
 @RenderBody()
 <div id="footer"></div>
-
-
 @Scripts.Render("~/bundles/jquery")
 @Scripts.Render("~/bundles/bootstrap")
 @Scripts.Render("~/bundles/react")
@@ -38,10 +37,8 @@
 </body>
 </html>
 <script>
-    $(document)
-        .ready(function () {
+    $(document).ready(function() {
             $(".pageLoaderContainer").fadeOut("slow");
-   
             var actionName = $('#currentAction').text();
             var menuItems = $("li a");
             for (var i = 0; i < menuItems.length; i++) {
