--- a/CrochetByJk/Views/Product/NoProducts.cshtml
+++ b/CrochetByJk/Views/Product/NoProducts.cshtml
@@ -3,7 +3,7 @@
     Layout = "../Shared/_Layout.cshtml";
 }
 
-<div style="min-height: 300px; text-align: center; margin-top: 5%;">
+<div style="text-align: center; margin: 15%;">
     <h1>Przepraszamy</h1>
-    <p>Chwilowo brak produktów w tej kategorii</p>
+    <p>chwilowo brak produktów w tej kategorii</p>
 </div>
