--- a/CrochetByJk/Views/Shared/Error.cshtml
+++ b/CrochetByJk/Views/Shared/Error.cshtml
@@ -5,7 +5,7 @@
     <title>Błąd</title>
 </head>
 <body>
-<hgroup style="min-height: 300px; text-align: center; margin-top: 5%;">
+<hgroup style="text-align: center; margin: 15%;">
     <h1>Coś poszło nie tak...</h1>
     <h2>Spróbuj ponownie lub skontaktuj się z administratorem.</h2>
 </hgroup>
