--- a/CrochetByJk/Views/Home/Index.cshtml
+++ b/CrochetByJk/Views/Home/Index.cshtml
@@ -5,7 +5,8 @@
 
 @Html.React("CategoryProducts", new
 {
-    products = Model
+    products = Model,
+    cssClass = "main-image-container"
 })
 <div id="aboutMeContainer" data-aos="fade-down"></div>
 
