--- a/CrochetByJk/Views/Product/ProductsInCategory.cshtml
+++ b/CrochetByJk/Views/Product/ProductsInCategory.cshtml
@@ -5,7 +5,8 @@
 
 @Html.React("CategoryProducts", new
 {
-    products = Model
+    products = Model,
+    cssClass = "image-container"
 })
 @section scripts
 {
